@@ -31,6 +31,8 @@ version 2.6.6 (??/??/20??):
 	Pidgin:
 	* Correctly size conversation and status box entries when the
 	  interior-focus style property is diabled. (Gabriel Schulhof)
+	* Correctly handle a multiline text field being required in a
+	  request form.  (Thanks to Florian Zeitz for finding this problem)
 
 version 2.6.5 (01/08/2010):
 	libpurple:
